docs/api/qiskit/0.19/qiskit.circuit.library.IGate.mdx
---
title: IGate (v0.19)
description: API reference for qiskit.circuit.library.IGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.IGate
---

# IGate

<Class id="qiskit.circuit.library.IGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/i.py" signature="IGate(label=None)" modifiers="class">
  Identity gate.

  Identity gate corresponds to a single-qubit gate wait cycle, and should not be optimized or unrolled (it is an opaque gate).

  **Matrix Representation:**

$$
\begin{split}I = \begin{pmatrix}
1 & 0 \\
0 & 1
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ I ├
       └───┘
  ```

  Create new Identity gate.

  ## Attributes

  <span id="igate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.IGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="igate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.IGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="igate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.IGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="igate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.IGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="igate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.IGate.add_decomposition" signature="IGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="igate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.IGate.assemble" signature="IGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="igate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.IGate.broadcast_arguments" signature="IGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="igate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.IGate.c_if" signature="IGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="igate-control" />

  ### control

  <Function id="qiskit.circuit.library.IGate.control" signature="IGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="igate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.IGate.copy" signature="IGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="igate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.IGate.inverse" signature="IGate.inverse()">
    Invert this gate.
  </Function>

  <span id="igate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.IGate.is_parameterized" signature="IGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="igate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.IGate.mirror" signature="IGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="igate-power" />

  ### power

  <Function id="qiskit.circuit.library.IGate.power" signature="IGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="igate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.IGate.qasm" signature="IGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="igate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.IGate.repeat" signature="IGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="igate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.IGate.to_matrix" signature="IGate.to_matrix()">
    Return a numpy.array for the identity gate.
  </Function>
</Class>

