docs/api/qiskit/0.24/qiskit.circuit.library.IGate.mdx
---
title: IGate
description: API reference for qiskit.circuit.library.IGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.IGate
---

<span id="qiskit-circuit-library-igate" />

# qiskit.circuit.library.IGate

<Class id="qiskit.circuit.library.IGate" github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/library/standard_gates/i.py" signature="IGate(label=None)">
  Identity gate.

  Identity gate corresponds to a single-qubit gate wait cycle, and should not be optimized or unrolled (it is an opaque gate).

  **Matrix Representation:**

  $$
  \begin{split}I = \begin{pmatrix}
          1 & 0 \\
          0 & 1
      \end{pmatrix}\end{split}
  $$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ I ├
       └───┘
  ```

  Create new Identity gate.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.library.IGate.__init__" name="__init__" signature="__init__(label=None)">
    Create new Identity gate.
  </Function>

  ## Methods

  |                                                                                                                                             |                                                                          |
  | ------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.library.IGate.__init__ "qiskit.circuit.library.IGate.__init__")(\[label])                                      | Create new Identity gate.                                                |
  | [`add_decomposition`](#qiskit.circuit.library.IGate.add_decomposition "qiskit.circuit.library.IGate.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.library.IGate.assemble "qiskit.circuit.library.IGate.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.library.IGate.broadcast_arguments "qiskit.circuit.library.IGate.broadcast_arguments")(qargs, cargs) | Validation and handling of the arguments and its relationship.           |
  | [`c_if`](#qiskit.circuit.library.IGate.c_if "qiskit.circuit.library.IGate.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`control`](#qiskit.circuit.library.IGate.control "qiskit.circuit.library.IGate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])         | Return controlled version of gate.                                       |
  | [`copy`](#qiskit.circuit.library.IGate.copy "qiskit.circuit.library.IGate.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.library.IGate.inverse "qiskit.circuit.library.IGate.inverse")()                                                 | Invert this gate.                                                        |
  | [`is_parameterized`](#qiskit.circuit.library.IGate.is_parameterized "qiskit.circuit.library.IGate.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.library.IGate.mirror "qiskit.circuit.library.IGate.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`power`](#qiskit.circuit.library.IGate.power "qiskit.circuit.library.IGate.power")(exponent)                                               | Creates a unitary gate as gate^exponent.                                 |
  | [`qasm`](#qiskit.circuit.library.IGate.qasm "qiskit.circuit.library.IGate.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.library.IGate.repeat "qiskit.circuit.library.IGate.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.library.IGate.reverse_ops "qiskit.circuit.library.IGate.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`to_matrix`](#qiskit.circuit.library.IGate.to_matrix "qiskit.circuit.library.IGate.to_matrix")()                                           | Return a numpy.array for the identity gate.                              |
  | [`validate_parameter`](#qiskit.circuit.library.IGate.validate_parameter "qiskit.circuit.library.IGate.validate_parameter")(parameter)       | Gate parameters should be int, float, or ParameterExpression             |

  ## Attributes

  |                                                                                                                |                                                                               |
  | -------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.circuit.library.IGate.decompositions "qiskit.circuit.library.IGate.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.library.IGate.definition "qiskit.circuit.library.IGate.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.library.IGate.duration "qiskit.circuit.library.IGate.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.circuit.library.IGate.label "qiskit.circuit.library.IGate.label")                            | Return gate label                                                             |
  | [`params`](#qiskit.circuit.library.IGate.params "qiskit.circuit.library.IGate.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.circuit.library.IGate.unit "qiskit.circuit.library.IGate.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.circuit.library.IGate.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.library.IGate.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.IGate.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.library.IGate.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### control

  <Function id="qiskit.circuit.library.IGate.control" name="control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.IGate.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.circuit.library.IGate.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.circuit.library.IGate.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.circuit.library.IGate.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.IGate.inverse" name="inverse" signature="inverse()">
    Invert this gate.
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.IGate.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Function id="qiskit.circuit.library.IGate.label" name="label" signature="property label">
    Return gate label

    **Return type**

    `str`
  </Function>

  ### mirror

  <Function id="qiskit.circuit.library.IGate.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.circuit.library.IGate.params" name="params" signature="property params">
    return instruction params.
  </Function>

  ### power

  <Function id="qiskit.circuit.library.IGate.power" name="power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.circuit.library.IGate.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.IGate.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.IGate.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.IGate.to_matrix" name="to_matrix" signature="to_matrix()">
    Return a numpy.array for the identity gate.
  </Function>

  ### unit

  <Function id="qiskit.circuit.library.IGate.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.IGate.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

